Add credit: Made by ADITYA with 🧠

--- a/extension/sidepanel/index.html
+++ b/extension/sidepanel/index.html
@@ -224,6 +224,11 @@
 
     </main>
 
+    <footer
+        style="text-align:center; padding:12px 0 10px; font-size:11px; color:rgba(255,255,255,0.35); letter-spacing:0.5px; font-weight:600;">
+        Made by ADITYA with 🧠
+    </footer>
+
     <script src="sidepanel.js"></script>
 </body>
 
